--- a/참고자료.md
+++ b/참고자료.md
@@ -77,7 +77,86 @@ print(data)
 | X or Y     | X와 Y 중에 하나만 참이어도 참이다. |
 | not X      | X가 거짓일 때 참이다.         |
 
+<br/>
 
+### 입출력 관련 자주 사용 - input().split() (⭐암기!)
+
+```python
+# 입력받은 문자열을 띄어쓰기로 구분하여 각각 정수형의 데이터로 저장
+list(map(int, input().split()))
+```
+
+`list(map(int, input().split()))`의 동작과정
+
+1. input()으로 입력 받은 문자열을 split()을 이용해 공백으로 나눈 리스트로 바꿈
+2. map()을 이용해서 해당 리스트의 모든 원소에 int() 함수를 적용
+3. 위의 결과를 list()로 다시 바꿔 입력받은 문자열을 띄어쓰기로 구분하여 각각 숫자 자료형으로 저장
+
+<br/>
+
+### 리스트에서 map() 사용하기
+
+* 리스트의 요소를 지정된 함수로 처리해주는 함수
+* 원본 리스트를 변경하지 않고 새로운 리스트를 생성
+* map에는 리스트나 튜플뿐만 아니라 모든 반복 가능한 객체를 넣을 수 있다.
+
+```python
+list(map(함수, 리스트))
+tuple(map(함수, 튜플))
+```
+
+```python
+# 실수가 저장된 리스트가 있을 때 리스트의 모든 요소를 정수로 변환
+a = [1.2, 2.5, 3.7, 4.6]
+a = list(map(int, a))
+a
+
+# 결과
+# [1, 2, 3, 4]
+```
+
+### 시퀀스 객체와 반복 가능한 객체의 차이
+
+* 시퀀스 객체는 요소의 순서가 정해져 있고 연속적으로 이어져 있어야 한다.
+* 한편, 딕셔너리와 세트는 요소(키)의 순서가 정해져 있지 않다.
+* 시퀀스 객체는 반복 가능한 객체보다 좁은 개념
+* 요소의 순서가 정해져 있고 연속적으로 이어져 있ㅇ면 시퀀스 객체, 요소의 순서와는 상관없이 요소를 한 번에 하나씩 꺼낼 수 있으면 반복 가능한 객체
+
+![시퀀스와 반복 가능한 객체](https://user-images.githubusercontent.com/27791880/209778484-15907a39-bf7e-43d9-9370-0c04d8a36304.png)
+
+<br/>
+
+### 입력을 위한 전형적인 소스코드 (⭐암기!)
+
+```python
+# 데이터의 개수 입력 -> 구분자가 줄 바꿈일 때
+n = int(input())
+# 각 데이터를 공백으로 구분하여 입력
+data = list(map(int, input().split()))
+
+data.sort(reverse=True)
+print(data)
+```
+
+### 공백을 기준으로 구분하여 적은 수의 데이터 입력 (⭐암기!)
+
+```python
+# n, m, k를 공백으로 구분하여 입력
+n, m, k = map(int, input().split())
+
+print(n, m, k)
+```
+
+### input()의 동작속도가 느려 시간초과를 받을 때 (⭐암기!)
+
+* 파이썬의 기본 input() 함수는 동작 속도가 느려서 시간 초과로 오답 판정을 받을 수 있음
+* 이 때, 파이썬의 sys 라이브러리에 정의된 `sys.stdin.readline()`함수를 사용
+* sys 라이브러리는 input()함수와 같이 한 줄씩 입력 받기 위해 사용
+
+```python
+import sys
+sys.stdin.readline().rstrip()
+```
 
 
 <br/>
@@ -86,3 +165,5 @@ print(data)
 ### Ref.
 
 * [Python Set update()](https://blog.finxter.com/python-set-update/)
+* [리스트에 map 사용하기](https://dojang.io/mod/page/view.php?id=2286)
+* [반복 가능한 객체 알아보기](https://dojang.io/mod/page/view.php?id=2405)
