feat: 파일 추가 및 기존 자료 업데이트
* feat: library.ipynb 추가
* update: io.ipynb에 내용 추가
* update: 참고자료.md에 내용 추가

--- a/참고자료.md
+++ b/참고자료.md
@@ -120,7 +120,7 @@ a
 * 시퀀스 객체는 요소의 순서가 정해져 있고 연속적으로 이어져 있어야 한다.
 * 한편, 딕셔너리와 세트는 요소(키)의 순서가 정해져 있지 않다.
 * 시퀀스 객체는 반복 가능한 객체보다 좁은 개념
-* 요소의 순서가 정해져 있고 연속적으로 이어져 있ㅇ면 시퀀스 객체, 요소의 순서와는 상관없이 요소를 한 번에 하나씩 꺼낼 수 있으면 반복 가능한 객체
+* 요소의 순서가 정해져 있고 연속적으로 이어져 있으면 시퀀스 객체, 요소의 순서와는 상관없이 요소를 한 번에 하나씩 꺼낼 수 있으면 반복 가능한 객체
 
 ![시퀀스와 반복 가능한 객체](https://user-images.githubusercontent.com/27791880/209778484-15907a39-bf7e-43d9-9370-0c04d8a36304.png)
 
@@ -152,11 +152,27 @@ print(n, m, k)
 * 파이썬의 기본 input() 함수는 동작 속도가 느려서 시간 초과로 오답 판정을 받을 수 있음
 * 이 때, 파이썬의 sys 라이브러리에 정의된 `sys.stdin.readline()`함수를 사용
 * sys 라이브러리는 input()함수와 같이 한 줄씩 입력 받기 위해 사용
+* sys 라이브러리를 사용할 떄는 반드시 한 줄 입력을 받은 다음 rstrip() 함수를 호출해야 한다.
+* readline() 엔터를 줄 바꿈 기호로 입력하게 되는데, 이 공백 문자를 제거하기 위함!
 
 ```python
+# readline 사용 예시
 import sys
-sys.stdin.readline().rstrip()
+data = sys.stdin.readline().rstrip()
+
+print(data)
 ```
+
+### 코딩테스트에서 중요한 6가지 표준 라이브러리
+
+| **표준 라이브러리**    | **설명**                                                                               |
+|-----------------|--------------------------------------------------------------------------------------|
+| **내장함수**        | print(), input()과 같은 기본 입출력 기능부터 sorted()와 같은 정렬 기능을 포함하고 있는 기본 내장 라이브러리             |
+| **itertools**   | 반복되는 형태의 데이터를 처리하는 기능을 제공하는 라이브러리. 순열과 조합 라이브러리를 제공함.                                |
+| **heqpq**       | 힙(Heap) 기능을 제공하는 라이브러리. 우선순위 큐 기능을 구현하기 위해 사용함.                                      |
+| **bisect**      | 이진 탐색(Binary Search) 기능을 제공하는 라이브러리                                                  |
+| **collections** | 덱(deque), 카운터(Counter) 등의 유용한 자료구조를 포함하고 있는 라이브러리                                    |
+| **math**        | 필수적인 수학적 기능을 제공하는 라이브러리. 팩토리얼, 제곱근, 최대공약수(GCD), 삼각함수 관련 함수부터 파이(pi)와 같은 상수를 포함하고 있음. |
 
 
 <br/>
