--- a/library.ipynb
+++ b/library.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "source": [
     "* 파이썬에서는 리스트의 원소로 리스트나 튜플이 존재하면 특정한 기준에 따라서 정렬을 수행할 수 있다.\n",
-    "* 이 때, 정렬 기준을 key 속성을 사용해서 명시할 수 있다.ㄹ"
+    "* 이 때, 정렬 기준을 key 속성을 사용해서 명시할 수 있다."
    ],
    "metadata": {
     "collapsed": false
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -226,8 +226,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### itertools\n",
-    "\n"
+    "## 2. itertools\n",
+    "\n",
+    "* 반복되는 데이터를 처리하는 기능을 포함하고 있는 라이브러리\n",
+    "* 코딩 테스트에서 유용한 클래스: permutations(순열), combinations(조합)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### itertools - permutations(순열)\n",
+    "\n",
+    "* 리스트와 같은 iterable 객체에서 r개의 데이터를 뽑아 일렬로 나열하는 모든 경우(순열)를 계산\n",
+    "* permutations는 클래스이기 때문에 객체 초기화 이후에는 리스트 자료형으로 변환하여 사용"
    ],
    "metadata": {
     "collapsed": false
@@ -235,8 +249,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 'B', 'C'), ('A', 'C', 'B'), ('B', 'A', 'C'), ('B', 'C', 'A'), ('C', 'A', 'B'), ('C', 'B', 'A')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에서 3개를 뽑아 나열하는 모든 경우를 출력\n",
+    "\n",
+    "from itertools import permutations\n",
+    "\n",
+    "data = ['A', 'B', 'C']\n",
+    "result = list(permutations(data, 3))\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### itertools - combinations(조합)\n",
+    "\n",
+    "* iterable 객체에서 r개의 데이터를 뽑아 순서를 고려하지 않고 나열하는 모든 경우를 계산한다.\n",
+    "* combinations는 클래스이기 때문에 객체 초기화 이후에는 리스트 자료형으로 변환해서 사용"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 'B'), ('A', 'C'), ('B', 'C')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에서 2개를 뽑아 순서에 상관없이 나열하는 모든 경우를 출력\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
+    "data = ['A', 'B', 'C']\n",
+    "result = list(combinations(data, 2))\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### itertools - product(중복순열)\n",
+    "\n",
+    "* iterable 객체에서 r개의 데이터를 뽑아 일렬로 나열하는 모든 경우(순열)를 계산\n",
+    "* 중복 허용\n",
+    "* product 객체를 초기화할 때는 뽑고자 하는 데이터의 수를 repeat 속성값으로 넣어줌\n",
+    "* product는 클래스이기 때문에 초기화 이후에는 리스트 자료형으로 변환하여 사용"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 'A'), ('A', 'B'), ('A', 'C'), ('B', 'A'), ('B', 'B'), ('B', 'C'), ('C', 'A'), ('C', 'B'), ('C', 'C')]\n",
+      "[('A', 'B'), ('A', 'C'), ('B', 'A'), ('B', 'C'), ('C', 'A'), ('C', 'B')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에서 중복을 포함하여 2개를 뽑아 나열하는 모든 경우를 출력\n",
+    "from itertools import product\n",
+    "\n",
+    "data = ['A', 'B', 'C']\n",
+    "result = list(product(data, repeat = 2))\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# permutations를 사용한 경우와 비교\n",
+    "# product와 달리 같은 원소가 2개 뽑히는 경우가 제외된다.\n",
+    "result = list(permutations(data, 2))\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### itertools - combinations_with_replacement(중복조합)\n",
+    "\n",
+    "* combinations와 유사\n",
+    "* iterable 객체에서 r개의 데이터를 뽑아 순서를 고려하지 않고 나열하는 모든 경우를 계산\n",
+    "* 원소를 중복해서 뽑음\n",
+    "* 클래스이기 때문에 객체 초기화 이후, 리스트 자료형으로 변환하여 사용"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 'A'), ('A', 'B'), ('A', 'C'), ('B', 'B'), ('B', 'C'), ('C', 'C')]\n",
+      "[('A', 'B'), ('A', 'C'), ('B', 'C')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에서 중복을 포함하여 2개를 뽑아 순서에 상관없이 나열하는 모든 경우를 출력\n",
+    "from itertools import combinations_with_replacement\n",
+    "\n",
+    "data = ['A', 'B', 'C']\n",
+    "result = list(combinations_with_replacement(data, 2))\n",
+    "print(result)\n",
+    "\n",
+    "# combinations와 비교\n",
+    "# 자신을 중복해서 뽑는 경우의 수가 제외되었다.\n",
+    "result = list(combinations(data, 2))\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
