--- a/MrKeeplearning/python_review/library.ipynb
+++ b/MrKeeplearning/python_review/library.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -400,6 +400,470 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## 3. heapq\n",
+    "\n",
+    "* 파이썬에서 heap 기능을 제공하기 위한 라이브러리\n",
+    "* 다익스트라 최단 경로 알고리즘을 포함한 다양한 알고리즘에서 우선순위 큐 기능을 구현하고자 할 때 사용\n",
+    "* PriorityQueue 라이브러리를 사용할 수도 있지만, 동작 속도를 고려해서 보통 heapq를 많이 사용\n",
+    "* 파이썬의 힙은 최소힙으로 구성되어 있어 단순히 원소를 힙에 전부 넣었다가 빼는 것만으로도 O(NlogN)에 오름차순으로 정렬이 됨\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "* 힙에 원소를 삽입할 때 : heapq.heappush()\n",
+    "* 힙에서 원소를 꺼낼 때 : heapq.heappop()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# heap sort(힙 정렬)을 heapq로 구현하는 예제\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "def heapsort(iterable):\n",
+    "    h = []\n",
+    "    result = []\n",
+    "    # 모든 원소를 차례대로 힙에 삽입\n",
+    "    for value in iterable:\n",
+    "        heapq.heappush(h, value)\n",
+    "\n",
+    "    # 힙에 삽입된 모든 원소를 차례대로 꺼내어 담기\n",
+    "    for _ in range(len(h)):\n",
+    "        result.append(heapq.heappop(h))\n",
+    "    return result\n",
+    "\n",
+    "result = heapsort([1, 3, 5, 7, 9, 2, 4, 6, 8, 0])\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* 파이썬에서는 최대 힙을 제공하지 않음\n",
+    "* heapq 라이브러리를 이용해서 최대 힙을 구현해야 할 때는 원소의 부호를 변경하는 방식을 사용함\n",
+    "* 힙에 원소를 삽입 전에 부호를 반대로 바꾸었다가, 힙에서 원소를 꺼낸 뒤 다시 원소의 부호를 바꿈"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 위의 방식으로 최대 힙을 구현하여 내림차순 정렬을 구현\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "def heapsort(iterable):\n",
+    "    h = []\n",
+    "    result = []\n",
+    "    # 모든 원소를 차례로 힙에 삽입\n",
+    "    for value in iterable:\n",
+    "        heapq.heappush(h, -value)\n",
+    "    # 힙에 삽입된 모든 원소를 차례대로 꺼내어 담기\n",
+    "    for _ in range(len(h)):\n",
+    "        result.append(-heapq.heappop(h))\n",
+    "    return result\n",
+    "\n",
+    "result = heapsort([1, 3, 5, 7, 9, 2, 4, 6, 8, 0])\n",
+    "print(result)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. bisect"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* 이진탐색 구현을 도와주는 라이브러리\n",
+    "* 정렬된 배열에서 특정한 원소를 찾아야 할 때 매우 효과적으로 사용\n",
+    "* `bisect_left()`, `bisect_right` -> 시간 복잡도 O(logN)\n",
+    "\n",
+    "**bisect_left(a, x)** : 정렬된 순서를 유지하면서 리스트 a에 데이터 x를 삽입할 가장 왼쪽 인덱스를 찾는 메서드\n",
+    "\n",
+    "**bisect_right(a, x)** : 정렬된 순서를 유지하도록 리스트 a에 데이터 x를 삽입할 가장 오른쪽 인덱스를 찾는 메서드"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "[1, 2, 4, 4, 8] 로 정렬된 리스트가 있을 때 새롭게 데이터 4를 삽입하려는 상황\n",
+    "이 때, bisect_left와 bisect_right가 반환하는 인덱스값을 확인\n",
+    "\"\"\"\n",
+    "\n",
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "a = [1, 2, 4, 4, 8]\n",
+    "x = 4\n",
+    "\n",
+    "print(bisect_left(a, x))\n",
+    "print(bisect_right(a, x))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* bisect_left()와 bisect_right()는 정렬된 리스트에서 값이 특정 범위에 속하는 원소의 개수를 구할 때 효과적으로 사용할 수 있음\n",
+    "* O(logN)의 시간 복잡도를 가지면서 빠르게 계산 가능"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "count_by_range(a, left_value, right_value) 함수는 정렬된 리스트 a에서\n",
+    "left_value이상 right_value 이하 범위에 해당하는 데이터의 개수를 반환함\n",
+    "\"\"\"\n",
+    "\n",
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "def count_by_range(a, left_value, right_value):\n",
+    "    left_index = bisect_left(a, left_value)\n",
+    "    right_index = bisect_right(a, right_value)\n",
+    "    return right_index - left_index\n",
+    "\n",
+    "a = [1, 2, 3, 3, 3, 3, 4, 4, 8, 9]\n",
+    "\n",
+    "# 값이 4인 데이터의 개수 출력\n",
+    "print(count_by_range(a, 4, 4))\n",
+    "\n",
+    "# 값이 [-1, 3] 범위에 있는 데이터의 개수 출력\n",
+    "print(count_by_range(a, -1, 3))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5. collections"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* collections 라이브러리의 기능 중에서 코딩 테스트에서 유용하게 사용하는 클래스는 deque와 Counter\n",
+    "* 파이썬에서는 deque를 사용해서 큐를 구현\n",
+    "* 별도의 Queue 라이브러리가 있지만 일반적인 큐 자료구조를 구현하는 것이 아니기 때문에 deque을 이용해 큐를 구현해야 함"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.1. deque"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "|                 | 리스트  | deque |\n",
+    "|-----------------|------|-------|\n",
+    "| 가장 앞쪽에 원소를 추가   | O(N) | O(1)  |\n",
+    "| 가장 뒤쪽에 원소 추가    | O(1) | O(1)  |\n",
+    "| 가장 앞쪽에 있는 원소 제거 | O(N) | O(1)  |\n",
+    "| 가장 뒤쪽에 있는 원소 제거 | O(1) | O(1)  |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* 리스트 자료형과 달리 인덱싱, 슬라이싱 등의 기능은 사용할 수 없음\n",
+    "* 나열된 데이터의 시작 부분이나 끝 부분에 데이터를 삽입하거나 삭제하고자할 때 스택 혹은 큐의 대용으로 사용할 수 있음\n",
+    "\n",
+    "**popleft()** : 첫 번째 원소를 제거할 때\n",
+    "**pop()** : 마지막 원소를 제거할 때\n",
+    "**appendleft(x)** : 첫 번째 인덱스에 원소 x를 삽입할 때\n",
+    "**append(x)** : 마지막 인덱스에 원소 x를 삽입할 때"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "deque를 큐 자료구조로 이용할 때는 원소 삽입 시 append(), 원소 삭제 시 popleft()를 사용한다."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2, 3, 4, 5])\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 가장 앞쪽과 뒤쪽에 원소를 삽입\n",
+    "from collections import deque\n",
+    "\n",
+    "data = deque([2, 3, 4])\n",
+    "data.appendleft(1)\n",
+    "data.append(5)\n",
+    "\n",
+    "print(data)\n",
+    "print(list(data))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.2. Counter"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* 등장 횟수를 세는 기능을 제공\n",
+    "* list와 같은 iterable 객체가 주어졌을 때, 해당 객체 내부의 원소가 몇 번씩 등장했는지 알려줌\n",
+    "* 원소별 등장 횟수를 세는 기능이 필요할 때 활용 가능"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "3\n",
+      "{'red': 2, 'blue': 3, 'green': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "counter = Counter(['red', 'blue', 'red', 'green', 'blue', 'blue'])\n",
+    "\n",
+    "print(counter['red'])\n",
+    "print(counter['green'])\n",
+    "print(counter['blue'])\n",
+    "print(dict(counter)) # 딕셔너리형으로 변환"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 6. math"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* 자주 사용되는 수학적인 기능을 포함하고 있음\n",
+    "* 팩토리얼, 제곱근, 최대공약수(GCD) 등을 계산해주는 기능을 포함"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# factorial(x) 함수는 x! 값을 반환\n",
+    "import math\n",
+    "\n",
+    "print(math.factorial(5))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0\n",
+      "2.6457513110645907\n",
+      "2.6457513110645907\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sqrt(x) 함수는 x의 제곱근을 반환\n",
+    "import math\n",
+    "\n",
+    "x = math.sqrt(49)\n",
+    "print(x)\n",
+    "print(math.sqrt(x))\n",
+    "print(math.sqrt(7))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gcd(a, b) 함수를 통해서 a와 b의 최대공약수를 반환받을 수 있음\n",
+    "import math\n",
+    "\n",
+    "print(math.gcd(21, 14))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "2.718281828459045\n"
+     ]
+    }
+   ],
+   "source": [
+    "# math 라이브러리는 pi나 자연상수 e를 제공할 수 있음\n",
+    "import math\n",
+    "\n",
+    "print(math.pi)\n",
+    "print(math.e)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
