--- a/MrKeeplearning/python_review/참고자료.md
+++ b/MrKeeplearning/python_review/참고자료.md
@@ -174,6 +174,7 @@ print(data)
 | **collections** | 덱(deque), 카운터(Counter) 등의 유용한 자료구조를 포함하고 있는 라이브러리                                    |
 | **math**        | 필수적인 수학적 기능을 제공하는 라이브러리. 팩토리얼, 제곱근, 최대공약수(GCD), 삼각함수 관련 함수부터 파이(pi)와 같은 상수를 포함하고 있음. |
 
+### [주요 라이브러리 상세보기](https://github.com/codehikerstudy/algorithm/blob/main/MrKeeplearning/python_review/library.ipynb)
 
 <br/>
 <br/>
