--- a/LeeJaeIk1996/honeytips/파이썬 연구소.md
+++ b/LeeJaeIk1996/honeytips/파이썬 연구소.md
@@ -1,13 +1,14 @@
-# ✍️ 파이썬 함수 정리
+# ✍️ 코테문제 풀면서 배운 것들 정리
 
 ## 📌 enumerate() 함수
+
 - enumerate(): **index, 원소 값을 추출하는 함수**
 
 - 순서가 있는 자료형(list, set, tuple, dictionary, string)을 입력으로 받아 인덱스 값을 포함하는 enumerate 객체를 리턴한다.
 
 - 보통 enumerate 함수는 for문과 함께 자주 사용된다. 
 
-- 예시
+- enumerate() 함수 예시
 ```
 class Solution2:
     def twoSum2(self, nums: List[int], target: int) -> List[int]:
@@ -21,3 +22,39 @@ class Solution2:
             hash_table[n] = i  
 ```
 
+---
+
+## 📌 zip() 함수
+
+- zip(): 주로 for문을 사용할 때 **여러 개의 리스트의 동일한 순서의 요소를 한 번에 이용할 때 사용**하는 함수
+
+- zip 함수 예시
+```
+numbers = [1, 2, 3]
+fruits = ["apple", "banana", "melon"]
+
+for pair in zip(numbers, fruits):
+    print(pair)
+```
+
+- zip 함수를 사용하면 두 개의 list나 tuple을 dictionary로 만들 수 있다.
+
+- zip 함수의 사전 변환 예시
+```
+numbers = [1, 2, 3]
+fruits = ["apple", "banana", "melon"]
+
+dict(zip(numbers, fruits))
+```
+
+---
+
+## 📌 defaultdict() - 유사 딕셔너리
+
+- defaultdict(): 딕셔너리를 만드는 dict 클래스의 서브클래스다.
+
+- from collections import defaultdict
+
+- **defaultdict의 인자 값은 int, set, list를 받을 수 있다.**
+
+- 기존의 딕셔너리는 존재하지 않는 키 값을 출력할 경우 에러가 발생한다. 하지만 defaultdict()의 경우 자동으로 디폴트 값이 들어간다.
