programmers 42748번 k번째 수, 42746 가장 큰 수 문제 풀이

--- a/LeeJaeIk1996/honeytips/파이썬 연구소.md
+++ b/LeeJaeIk1996/honeytips/파이썬 연구소.md
@@ -88,3 +88,27 @@ dict(zip(numbers, fruits))
     - Optional[int]는 **int 또는 None을 나타낸다.**
 
     - 문제 예시: [leetcode 105번 문제 - Construct Binary Tree from Preorder and Inorder Traversal](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
+
+---
+
+## 📌 map() 함수
+
+- map(function, iterable): 함수(function)와 반복 가능한 데이터(iterable)를 입력으로 받은 뒤, 입력받은 데이터의 각 요소에 **함수(function)를 적용한 결과를 리턴**하는 함수이다.
+
+- map()은 여러 개의 데이터를 한 번에 다른 형태로 변환하기 위해 사용되며, 그렇기 때문에 여러 개의 데이터를 담는 list나 tuple에 주로 사용된다.
+
+- map()과 함께 lambda 함수를 사용하면 더욱 간단한 코드를 짤 수 있다.
+
+- 문제 예시: [programmers 42746번 문제 - 가장 큰 수](https://school.programmers.co.kr/learn/courses/30/lessons/42746)
+
+--
+
+## 📌 join() 함수 - 문자열로 반환해주는 함수
+
+- '구분자'.join(리스트): join()함수는 매개변수로 들어온 **리스트에 있는 요소** 하나 하나를 합쳐서 **하나의 문자열로 바꾸어 반환** 하는 함수
+
+- ''.join(리스트): ['x', 'y', 'z']의 리스트가 있을 경우, 이를 **'xyz'의 문자열로 합쳐서 반환** 해준다.
+
+- '구분자'.join(리스트): ['x', 'y', 'z']의 리스트와 구분자 , 가 있을 경우, 이를 **'x,y,z'와 같은 형태의 문자열로 반환** 해준다.
+
+- 문제 예시: [programmers 42746번 문제 - 가장 큰 수](https://school.programmers.co.kr/learn/courses/30/lessons/42746)
